--- a/lab/tec/dt/561202/index.html
+++ b/lab/tec/dt/561202/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Il Calendario della Terra - desktop</title>
+    <title>The Earth Calendar - desktop</title>
     <style>
         html, body {
             margin: 0;
@@ -19,7 +19,7 @@
         }
         .centered {
             text-align: center;
-            font-family: Nimbus Roman; font-weight: bold;
+            font-family: times Roman; font-weight: bold;
         }
 a {
     color: black;
@@ -42,13 +42,15 @@ a:active {
 
 <div class="centered">
 
-<div style="font-size: 56px;">
+<div style="font-size: 48px;">
 
-<a href='earthcal.html' target='TEC' title='Il Calendario della Terra'>
+<a href='earthcal.html' target='TEC' title='The Earth Calendar'>
 
-<strong>__ Il Calendario della Terra __</strong>
+<strong>__ The Earth Calendar __</strong>
 
 </a>
+
+<div style="font-size: 26px;">A Proven Interface for Epoch Time</div>
 
 </div>
 
@@ -56,19 +58,18 @@ a:active {
 
 <div style="font-size: 32px;">
 
-<a href="settenni.html"><span id="risult_1"></span></a>, <a href="tec_logo.html"><span id="risult_2"></span></a>, della <a href="nuova_era.html">Nuova Era Terrestre</a>
+<a href="septennia.html"><span id="risult_1"></span></a>, <a href="tec_logo.html"><span id="risult_2"></span></a>, of the <a href="nuova_era.html">New Terrestrial Era</a>
 
 </a>
 
-<script language="JavaScript" src="setten_0.js"></script></a>
+<script language="JavaScript" src="septen_0.js"></script></a>
 
 </div>
 
 <div style="font-size: 36px;">
 
-<SCRIPT language="JavaScript" src="tec_date.js"></SCRIPT>
-
-<SCRIPT language="JavaScript" src="random_sp.js"></SCRIPT>
+<span style="font-size: 36px;"><SCRIPT language="JavaScript" src="tec_date.js"></SCRIPT></span>
+<span style="font-size: 34px;"><SCRIPT language="JavaScript" src="random_hp.js"></SCRIPT></span>
 
 </div>
 
@@ -76,14 +77,14 @@ a:active {
 
 <div style="font-size: 32px;">
 
-<i>ora locale <span id="clock"></span></i>
+<i>local time <span id="clock"></span></i>
 
 </div>
 
 <br><br><br><br><br>
 <br><br><br><br><br>
 
-<div style="font-size: 44px;">
+<div style="font-size: 32px;">
 
 <a href="epoch.html" target="epoch" title="Epoch Time">
 
