--- a/lab/tec/dt/earthcal.html
+++ b/lab/tec/dt/earthcal.html
@@ -41,7 +41,7 @@ a:active {
 
 <div class="centered" style="width: 60%; margin: 0 auto; margin-top: -80px; font-size: 36px;">
 
-__ <span id="epoch"></span> __ è il numero dei secondi trascorsi dalla mezzanotte del 01/01/1970, anno della Vecchia Era, anno 1 della Nuova Era Terrestre. Questo è il tempo misurato dai computer, dagli smartphone, dalle macchine, dai Robot. Ma è anche il tempo degli Umani che vogliono far proseguire la loro vita in un tempo in cui non son più soli sulla Terra. Poiché espresso in secondi non possiamo interpretarlo, ecco <i><a href="../../index.htm">Il Calendario della Terra</a></i>. Che ci permette di accedere al tempo della Nuova Era.
+<i><a href="../index.htm">The Earth Calendar</a></i> was born with the rise of the Internet, when everyone had the tools to start changing the world. This calendar places 1969 of the Old Era as Year Zero of the new one. Conceived for human needs, it was later found to be in perfect agreement with the time measured by computers and machines. <i><a href="../index.htm">The Earth Calendar</a></i> is a proven interface for humans with the new time of the Robots.
 
 </div>
 
