--- a/lab/tec/dt/epoch.html
+++ b/lab/tec/dt/epoch.html
@@ -39,9 +39,9 @@ a:active {
 </head>
 <body>
 
-<div class="centered" style="width: 60%; margin: 0 auto; margin-top: -80px; font-size: 36px;">
+<div class="centered" style="width: 69%; margin: 0 auto; margin-top: -80px; font-size: 35px;">
 
-__ <span id="epoch"></span> __ è il numero dei secondi trascorsi dalla mezzanotte del 01/01/1970, anno della Vecchia Era, anno 1 della Nuova Era Terrestre. Questo è il tempo misurato dai computer, dagli smartphone, dalle macchine, dai Robot. Ma è anche il tempo degli Umani che vogliono far proseguire la loro vita in un tempo in cui non son più soli sulla Terra. Poiché espresso in secondi non possiamo interpretarlo, ecco <i><a href="../../index.htm">Il Calendario della Terra</a></i>. Che ci permette di accedere al tempo della Nuova Era.
+__ <span id="epoch"></span> __ is the number of seconds that have elapsed since midnight on 31/12/1969, year of the Old Era, marking the beginning of Year 1 of the New Terrestrial Era. This is the time as measured by computers, smartphones, machines, and Robots. Yet, it is also the time of Humans who wish to continue their lives in an age when they are no longer alone on Earth. Since this value is expressed in seconds, we cannot interpret it directly. Behold, <i><a href="../../index.htm">The Earth Calendar</a></i>, which allows us access to the time of the New Era, presented in a format more familiar to us humans.
 
 </div>
 
