--- a/lab/tec/dt/it/5612011/index.html
+++ b/lab/tec/dt/it/5612011/index.html
@@ -25,15 +25,19 @@ a {
     color: black;
     text-decoration: none;
 }
-a:visited {
-    color: black;
-}
 a:hover {
     color: gray;
     text-decoration: none;
 }
 a:active {
     color: black;
+    text-decoration: none;
+}
+a:visited {
+    color: black;
+}
+a:visited:hover {
+    color: gray;
     text-decoration: none;
 }
     </style>
@@ -44,7 +48,7 @@ a:active {
 
 <div style="font-size: 56px;">
 
-<a href='earthcal.html' target='TEC' title='Il Calendario della Terra'>
+<a href='https://earthcal.hyperlinker.org' target='TEC' title='Il Calendario della Terra'>
 
 <strong>__ Il Calendario della Terra __</strong>
 
@@ -56,11 +60,13 @@ a:active {
 
 <div style="font-size: 32px;">
 
-<a href="settenni.html"><span id="risult_1"></span></a>, <a href="tec_logo.html"><span id="risult_2"></span></a>, della <a href="nuova_era.html">Nuova Era Terrestre</a>
+<a href="settenni.html"><script language="JavaScript" src="setten_0.js"></script></a>, della 
+<a href="nuovaera.html">Nuova Era Terrestre</a>
+
+<span id="risult_1"></span>
+<span id="risult_2"></span>
 
 </a>
-
-<script language="JavaScript" src="setten_0.js"></script></a>
 
 </div>
 
