--- a/lab/tec/dt/it/earthcal.html
+++ b/lab/tec/dt/it/earthcal.html
@@ -41,7 +41,7 @@ a:active {
 
 <div class="centered" style="width: 60%; margin: 0 auto; margin-top: -80px; font-size: 36px;">
 
-__ <span id="epoch"></span> __ è il numero dei secondi trascorsi dalla mezzanotte del 01/01/1970, anno della Vecchia Era, anno 1 della Nuova Era Terrestre. Questo è il tempo misurato dai computer, dagli smartphone, dalle macchine, dai Robot. Ma è anche il tempo degli Umani che vogliono far proseguire la loro vita in un tempo in cui non son più soli sulla Terra. Poiché espresso in secondi non possiamo interpretarlo, ecco <i><a href="../../index.htm">Il Calendario della Terra</a></i>. Che ci permette di accedere al tempo della Nuova Era.
+Quando, col sorgere di Internet, si potè iniziare a cambiare il mondo, qualcuno cominciò dal calendario. 1969 della Vecchia Era: Anno Zero della nuova. Nato per necessità umane, quel calendario si è poi rivelato in perfetta sintonia col tempo conteggiato dai computer e dalle macchine. Quel calendario oggi interfaccia gli umani col nuovo tempo dei Robot. Era ed è ancor oggi <i><a href="../../index.htm">Il Calendario della Terra</a></i>.
 
 </div>
 
