--- a/lab/tec/dt/powers.html
+++ b/lab/tec/dt/powers.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Il Calendario della Terra - desktop</title>
+    <title>The Earth Calendar - powers</title>
     <style>
         html, body {
             margin: 0;
@@ -18,7 +19,7 @@
         }
         .centered {
             text-align: center;
-            font-family: Times Roman; font-weight: bold;
+            font-family: Nimbus Roman; font-weight: bold;
         }
 a {
     color: black;
@@ -41,7 +42,7 @@ a:active {
 
 <div class="centered" style="width: 60%; margin: 0 auto; margin-top: -80px; font-size: 36px;">
 
-__ <span id="epoch"></span> __ è il numero dei secondi trascorsi dalla mezzanotte del 01/01/1970, anno della Vecchia Era, anno 1 della Nuova Era Terrestre. Questo è il tempo misurato dai computer, dagli smartphone, dalle macchine, dai Robot. Ma è anche il tempo degli Umani che vogliono far proseguire la loro vita in un tempo in cui non son più soli sulla Terra. Poiché espresso in secondi non possiamo interpretarlo, ecco <i><a href="../../index.htm">Il Calendario della Terra</a></i>. Che ci permette di accedere al tempo della Nuova Era.
+Humans possess many powers, but they often fail to use them (or use too few, leading to imbalance) because they forget that an ocean of potential resides within. Only by cultivating all of them can one build a balanced, and thus solid, personality. Here, there is something for everyone, for every day of the year.
 
 </div>
 
@@ -50,8 +51,6 @@ __ <span id="epoch"></span> __ è il numero dei secondi trascorsi dalla mezzanot
 <a href="index.html">&#9660;</a>
 
 </div>
-
-<script src="epoch.js"></script>
 
 </body>
 </html>
