--- a/lab/corpus/rut_56.html
+++ b/lab/corpus/rut_56.html
@@ -63,17 +63,7 @@ Titolo dell'opera:
 
 <br><br>
 
-Opera immessa su network perenne <a class="none" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a> e certificata su blockchain <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. La licenza è nell'ultima pagina della Lettera, per il caso di cessione di proprietà
-
-<!--
-
-Somma richiesta: 27.000.000 (ventisette milioni) di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>.
-
-<br><br>
-
-In vendita presso <i><a class="none" href="../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">La Bottega della Buona Sorte</a></i>.
-
--->
+Opera su network perenne <a class="none" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a> e certificata su blockchain <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. La licenza è nell'ultima pagina della Lettera. Somma richiesta: 27.000.000 (ventisette milioni) di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. In vendita presso <i><a class="none" href="../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">La Bottega della Buona Sorte</a></i>.
 
 </span>
 
