--- a/lab/index.html
+++ b/lab/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <title>HyperLinker.org Domain Redirect Script</title>
-    
     <script>
         const hostname = window.location.hostname;
         const redirectMap = {
@@ -36,26 +34,57 @@
             'al-presidente.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/pdr.html',
             'alla-presidenza.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/pdr.html',
             'rut.hyperlinker.org': 'https://hyperlinker.org/corpus/rut_56.html',
+            'corpus.hyperlinker.org': 'https://hyperlinker.org/corpus/index.html',
         };
-
         if (redirectMap[hostname]) {
             window.location.replace(redirectMap[hostname]);
         }
-
     </script>
-
     <style>
-        /* ... il tuo codice CSS */
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: white;
+        }
+        .centered {
+            text-align: center;
+            font-family: Times Roman; font-weight: bold;
+        }
+a {
+    color: black;
+    text-decoration: none;
+}
+a:visited {
+    color: black;
+}
+a:hover {
+    color: gray;
+    text-decoration: none;
+}
+a:active {
+    color: black;
+    text-decoration: none;
+}
     </style>
 </head>
 
 <body>
 
-<CENTER><TABLE WIDTH="100%" HEIGHT="100%"><TR><TD ALIGN="CENTER" VALIGN="MIDDLE">
+<div class="centered" style="width: 60%; margin: 0 auto; margin-top: -120px; font-size: 48px;" >
 
-<a href="index.htm">Hyper Linker</a>
+<a href="hl_it.htm">Hyper Linker</a>
 
-</TD></TR></TABLE></CENTER>
+<br>
+
+<div style="font-size: 18px; ">GLOBAL RESEARCHES FOR COMMON PROFIT</div>
+
+</div>
 
 </body>
 </html>
