--- a/lab/tec/dt/it/561201/test/index (Copy).html
+++ b/lab/tec/dt/it/561201/test/index (Copy).html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Il Calendario della Terra - desktop</title>
+    <title>The Earth Calendar</title>
     <style>
         html, body {
             margin: 0;
@@ -25,16 +25,16 @@ a {
     color: black;
     text-decoration: none;
 }
-a:visited {
-    color: black;
-}
 a:hover {
-    color: gray;
-    text-decoration: none;
+    color: black;
+    text-decoration: underline;
 }
 a:active {
     color: black;
     text-decoration: none;
+}
+a:visited {
+    color: black;
 }
     </style>
 </head>
@@ -44,7 +44,7 @@ a:active {
 
 <div style="font-size: 56px;">
 
-<a href='earthcal.html' target='TEC' title='Il Calendario della Terra'>
+<a href='https://earthcal.hyperlinker.org' target='TEC' title='Il Calendario della Terra'>
 
 <strong>__ Il Calendario della Terra __</strong>
 
@@ -56,17 +56,13 @@ a:active {
 
 <div style="font-size: 32px;">
 
-<a href="settenni.html"><span id="risult_1"></span></a>, <a href="tec_logo.html"><span id="risult_2"></span></a>, della <a href="nuova_era.html">Nuova Era Terrestre</a>
-
-</a>
-
-<script language="JavaScript" src="setten_0.js"></script></a>
+<script language="JavaScript" src="sptn.js"></script>
 
 </div>
 
 <div style="font-size: 36px;">
 
-<SCRIPT language="JavaScript" src="tec_date.js"></SCRIPT>
+<SCRIPT language="JavaScript" src="date.js"></SCRIPT>
 
 <SCRIPT language="JavaScript" src="random_sp.js"></SCRIPT>
 
@@ -76,27 +72,37 @@ a:active {
 
 <div style="font-size: 32px;">
 
-<i>ora locale <span id="clock"></span></i>
+<i>ora locale <span id="orologio"></span></i>
 
 </div>
 
-<br><br><br><br><br>
-<br><br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+
+<div style="font-size: 32px;">
+
+<script>
+function aggiornaOra() {
+const ora = new Date();
+document.getElementById('orologio').textContent = ora.toLocaleTimeString('it-IT');
+}
+aggiornaOra();
+setInterval(aggiornaOra, 1000);
+</script>
+
+</div>
+
+<br><br>
 
 <div style="font-size: 44px;">
 
-<a href="epoch.html" target="epoch" title="Epoch Time">
-
 <strong>__ Epoch Time: <span id="epoch"></span> __</strong>
 
-</a>
-
-</div>
-
-</div>
-
-<script src="clock.js"></script>
 <script src="epoch.js"></script>
+
+</div>
+
+</div>
 
 </body>
 </html>
