--- a/lab/tec/dt/it/earthcal_561202.html
+++ b/lab/tec/dt/it/earthcal_561202.html
@@ -41,7 +41,7 @@ a:active {
 
 <div class="centered" style="width: 60%; margin: 0 auto; margin-top: -80px; font-size: 36px;">
 
-__ <span id="epoch"></span> __ è il numero dei secondi trascorsi dalla mezzanotte del 01/01/1970, anno della Vecchia Era, anno 1 della Nuova Era Terrestre. Questo è il tempo misurato dai computer, dagli smartphone, dalle macchine, dai Robot. Ma è anche il tempo degli Umani che vogliono far proseguire la loro vita in un tempo in cui non son più soli sulla Terra. Poiché espresso in secondi non possiamo interpretarlo, ecco <i><a href="../../index.htm">Il Calendario della Terra</a></i>. Che ci permette di accedere al tempo della Nuova Era.
+<i><a href="../../index.htm">Il Calendario della Terra</a></i> nacque col sorgere di Internet, quando ognuno ebbe gli strumenti per iniziare a cambiare il mondo. Questo calendario pone il 1969 della Vecchia Era quale Anno Zero della nuova. Concepito per le necessità umane, si è poi rivelato in perfetto accordo col tempo misurato dai computer e dalle macchine. <i><a href="../../index.htm">Il Calendario della Terra</a></i> oggi è provata interfaccia degli umani col nuovo tempo dei Robot.
 
 </div>
 
