--- a/lab/tec/dt/it/tec_logo.html
+++ b/lab/tec/dt/it/tec_logo.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Il Calendario della Terra - desktop</title>
+    <title>Il Calendario della Terra - poteri</title>
     <style>
         html, body {
             margin: 0;
@@ -41,7 +42,7 @@ a:active {
 
 <div class="centered" style="width: 60%; margin: 0 auto; margin-top: -80px; font-size: 36px;">
 
-__ <span id="epoch"></span> __ è il numero dei secondi trascorsi dalla mezzanotte del 01/01/1970, anno della Vecchia Era, anno 1 della Nuova Era Terrestre. Questo è il tempo misurato dai computer, dagli smartphone, dalle macchine, dai Robot. Ma è anche il tempo degli Umani che vogliono far proseguire la loro vita in un tempo in cui non son più soli sulla Terra. Poiché espresso in secondi non possiamo interpretarlo, ecco <i><a href="../../index.htm">Il Calendario della Terra</a></i>. Che ci permette di accedere al tempo della Nuova Era.
+Il Calendario della Terra ha un bellissimo logo, eccolo: 
 
 </div>
 
@@ -51,7 +52,7 @@ __ <span id="epoch"></span> __ è il numero dei secondi trascorsi dalla mezzanot
 
 </div>
 
-<script src="epoch.js"></script>
+<script src="setten_1.js"></script>
 
 </body>
 </html>
