--- a/lab/index.html
+++ b/lab/index.html
@@ -35,6 +35,7 @@
             'alla-presidenza.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/pdr.html',
             'rut.hyperlinker.org': 'https://hyperlinker.org/corpus/rut_56.html',
             'corpus.hyperlinker.org': 'https://hyperlinker.org/corpus/index.html',
+            'epoch.hyperlinker.org': 'https://hyperlinker.org/tec/dt/index.html',
         };
         if (redirectMap[hostname]) {
             window.location.replace(redirectMap[hostname]);
