--- a/lab/tec/dt/septennia.html
+++ b/lab/tec/dt/septennia.html
@@ -40,9 +40,9 @@ a:active {
 </head>
 <body>
 
-<div class="centered" style="width: 60%; margin: 0 auto; margin-top: -80px; font-size: 36px;">
+<div class="centered" style="width: 64%; margin: 0 auto; margin-top: -80px; font-size: 36px;">
 
-The reckoning of time of the New Terrestrial Era starts from 1969, the Year Zero. Therefore, <span id="settennioCardinale"></span> septennia have already passed since then, and we are now in the <span id="settennioOrdinale"></span>, called the <span id="settennioSimbolo"></span> in observance of the general symbology, as well as of the logo of the Calendar.
+The time reckoning of the New Terrestrial Era begins with 1969, the Year Zero. Therefore, <span id="settennioCardinale"></span> septennia have elapsed since then, and we are now in the <span id="settennioOrdinale"></span>. It is named Septennium <span id="settennioSimbolo"></span> in observance of the general rhythmic evocations, following the order illustrated in the <a href="tec_logo.html">Calendar's logo</a>.
 
 </div>
 
