--- a/lab/tec/dt/tec_logo_original.html
+++ b/lab/tec/dt/tec_logo_original.html
@@ -40,28 +40,9 @@ a:active {
 </head>
 <body>
 
-<div style="
-    width: 60%; 
-    margin: 0 auto; 
-    margin-top: -80px; 
-    font-size: 36px; 
-    font-family: 'Times New Roman', Times, serif; 
-    font-weight: bold;
-    
-    display: flex; /* Trasforma il div in un contenitore flessibile */
-    justify-content: center; /* Centra orizzontalmente il contenuto */
-    align-items: center; /* Allinea verticalmente (testo e logo) */
-">
+<div class="centered" style="width: 60%; margin: 0 auto; margin-top: -80px; font-size: 36px;">
 
-<div style="flex-grow: 1; padding-right: 48px; text-align: right;">
-
-<i>The Earth Calendar</i> uses a special nomenclature to designate all its time divisions: the days, the years, and the septennia. Its logo expresses this approach.
-    
-</div>
-
-<div style="flex-shrink: 0;">
-<img src="tec_logo.svg" alt="Logo" style="height: 333px; width: auto; display: block;">
-</div>
+The Earth Calendar uses a special nomenclature to designate all its time divisions: the days, the years, and the septennia. Its logo reflects this approach:
 
 </div>
 
