--- a/lab/tec/dt/earthcal.html
+++ b/lab/tec/dt/earthcal.html
@@ -43,6 +43,18 @@ a:active {
 
 <i><a href="../index.htm">The Earth Calendar</a></i> was born with the rise of the Internet, when everyone had the tools to start changing the world. This calendar places 1969 of the Old Era as Year Zero of the new one. Conceived for human needs, it was later found to be in perfect agreement with the time measured by computers and machines. <i><a href="../index.htm">The Earth Calendar</a></i> is a proven interface for humans with the new time of the Robots.
 
+<br><br>
+
+<div style="font-size: 24px;">
+
+<a href="../ebook.pdf">the ebook</a>
+<span style="margin-right: 48px;"></span> 
+<a href="../50_en.pdf">a sample almanac</a> 
+<span style="margin-right: 48px;"></span> 
+<a href="../index.htm">the old site</a>
+
+</div>
+
 </div>
 
 <div style="font-size: 111px; position: fixed; bottom: 48px; width: 100%; text-align: center;">
