--- a/lab/tec/almanacs.htm
+++ b/lab/tec/almanacs.htm
@@ -87,6 +87,7 @@ past years almanacs: <img src="blank.gif">
 <a class="linksign" href="alms/en/47.pdf" target="almanac">47</a>
 <a class="linksign" href="alms/en/48.pdf" target="almanac">48</a>
 <a class="linksign" href="alms/en/49.pdf" target="almanac">49</a>
+<a class="linksign" href="alms/en/50.pdf" target="almanac">50</a>
 
 </td></tr></table>
 
