--- a/lab/tec/dt/index.html
+++ b/lab/tec/dt/index.html
@@ -42,6 +42,8 @@ a:active {
 
 <div class="centered">
 
+<br><br>
+
 <div style="font-size: 48px;">
 
 <a href='earthcal.html' target='' title='The Earth Calendar'>
@@ -82,17 +84,21 @@ This is the <a href="new_era.html">New Terrestrial Era</a>, <a href="septennia.h
 </div>
 
 <br><br><br><br><br>
-<br><br><br><br><br>
+<br><br><br>
 
 <div style="font-size: 32px;">
 
-<a href="epoch.html" target="epoch" title="Epoch Time">
+<a href="epoch.html" target="" title="Epoch Time">
 
 <strong>__ Epoch Time: <span id="epoch"></span> __</strong>
 
 </a>
 
 </div>
+
+<br><br><br><br>
+
+<i><a href="../index.htm">The Earth Calendar</a> and its <a href="../legal.htm">Logo</a> are <a href="../legal.htm">trademarks</a> of the <a href="../../eulab/index.htm">Eudaemony Laboratory</a></i>
 
 </div>
 
