--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -94,8 +94,8 @@ Prima lettera all'EuroParlamento
 
 <div style="font-size: 24px; padding: 12px; display: inline-block;">
 
-Questa ormai non è più solo una campagna socio/politica.<br>
-<b><a class="none" href="../../index.htm">Il D.P.R.380/2001 si inserisce in una ampia iniziativa culturale.</a></b><br>
+Questa non è più solo una ristretta campagna socio/politica.<br>
+<b><a class="none" href="../../index.htm">Il D.P.R.380/2001 si inserisce ormai in una ben più ampia iniziativa.</a></b><br>
 
 
 </div>
@@ -106,7 +106,7 @@ Perché fatti del genere mostrano inequivocabilmente la permasta tirannide.
 
 <div style="font-size: 28px; padding: 12px; display: inline-block;">
 
-Questa ormai non è più solo una campagna socio/politica<br>
+Questa ormai non è più solo una limitata campagna socio/politica<br>
 <b><a class="none" href="cultura.html">D.P.R.380/2001: nasce l'iniziativa culturale ed artistica</a></b>
 
 </div>
