--- a/lab/tec/almanacchi.htm
+++ b/lab/tec/almanacchi.htm
@@ -81,12 +81,13 @@ almanacchi degli anni andati:
 <a class="linksign" href="alms/it/41.pdf" target="almanacco">41</a>
 <a class="linksign" href="alms/it/42.pdf" target="almanacco">42</a>
 <a class="linksign" href="alms/it/43.pdf" target="almanacco">43</a>
-<a class="linksign" href="alms/it/44.pdf" target="almanacco">44</a>
+<a class="linksign" href="44/alms/it.pdf" target="almanacco">44</a>
 <a class="linksign" href="alms/it/45.pdf" target="almanacco">45</a>
 <a class="linksign" href="alms/it/46.pdf" target="almanacco">46</a>
 <a class="linksign" href="alms/it/47.pdf" target="almanacco">47</a>
 <a class="linksign" href="alms/it/48.pdf" target="almanacco">48</a>
 <a class="linksign" href="alms/it/49.pdf" target="almanacco">49</a>
+<a class="linksign" href="alms/it/50.pdf" target="almanacco">50</a>
 
 </td></tr></table>
 
