--- a/lab/tec/dt/index.html
+++ b/lab/tec/dt/index.html
@@ -98,7 +98,7 @@ This is the <a href="new_era.html">New Terrestrial Era</a>, <a href="septennia.h
 
 <br><br><br><br>
 
-<i><a href="../index.htm">The Earth Calendar</a> and its <a href="../legal.htm">Logo</a> are <a href="../legal.htm">trademarks</a> of the <a href="../../eulab/index.htm">Eudaemony Laboratory</a></i>
+<i><a href="../legal.htm">Copyright and trademark</a> <a href="../../eulab/index.htm">Laboratorio Eudemonia</a> - created by <a href="../../index.html">HyperLinker</a></i>
 
 </div>
 
