--- a/lab/tec/dt/earthcal.html
+++ b/lab/tec/dt/earthcal.html
@@ -51,7 +51,7 @@ a:active {
 <span style="margin-right: 48px;"></span> 
 <a href="../50_en.pdf">a sample almanac</a> 
 <span style="margin-right: 48px;"></span> 
-<a href="../index.htm">the old site</a>
+<a href="../index.htm">the site</a>
 
 </div>
 
