--- a/lab/tec/dt/septennia.html
+++ b/lab/tec/dt/septennia.html
@@ -42,7 +42,7 @@ a:active {
 
 <div class="centered" style="width: 64%; margin: 0 auto; margin-top: -80px; font-size: 36px;">
 
-The time reckoning of the New Terrestrial Era begins with 1969, the Year Zero. Therefore, <span id="settennioCardinale"></span> septennia have elapsed since then, and we are now in the <span id="settennioOrdinale"></span>. It is named Septennium <span id="settennioSimbolo"></span> in observance of the general rhythmic evocations, following the order illustrated in the <a href="tec_logo.html">Calendar's logo</a>.
+The time reckoning of the New Terrestrial Era begins with 1969, the Year Zero. Therefore, <span id="settennioCardinale"></span> septennia have elapsed since then, and we are now in the <span id="settennioOrdinale"></span>. It is named Septennium <span id="settennioSimbolo"></span> in observance of the general rhythmic evocations of this Calendar, following the order illustrated in it's <a href="tec_logo.html">logo</a>.
 
 </div>
 
