--- a/lab/tec/dt/tec_logo.html
+++ b/lab/tec/dt/tec_logo.html
@@ -55,7 +55,7 @@ a:active {
 
 <div style="flex-grow: 1; padding-right: 48px; text-align: right;">
 
-<i>The Earth Calendar</i> uses a special nomenclature to designate all its time divisions: the days, the years, and the septennia. Its logo expresses this approach.
+<i>The Earth Calendar</i> uses a special nomenclature to designate its main time divisions: the days, the years, and the septennia. Its logo expresses this approach.
     
 </div>
 
