--- a/lab/repita/camps/immo/euro_1.html
+++ b/lab/repita/camps/immo/euro_1.html
@@ -24,11 +24,11 @@
 </i></b>
 </a>
 
-<br><br><br><br>
+<br><br><br>
 
 <table width="100%"><tr><td width="3%" align="center" valign="middle">
 
-<div style="font-size: 18px;">
+<div style="font-size: 24px;">
 
 <a class="none" href="prefa.html">B<br>A<br>C<br>K</a>
 
@@ -37,6 +37,10 @@
 </td><td width="94%" align="center" valign="middle">
 
 <div style="font-size: 24px;">
+
+<i><b>Lettere agli Euro Parlamentari</b></i>
+
+<br><br><br>
 
 <b><a class="line" href="euro/euro_it.pdf" target="euro_it">Un'Eco Storica dall'Italia: l’Irrisolta Transizione alla Repubblica</a></b>
 
@@ -64,7 +68,7 @@
 
 </td><td width="3%" align="center" valign="middle">
 
-<div style="font-size: 18px;">
+<div style="font-size: 24px;">
 
 <a class="none" href="prefa.html">F<br>O<br>R<br>W<br>A<br>R<br>D</a>
 
@@ -72,7 +76,7 @@
 
 </td></tr></table>
 
-<br><br><br><br>
+<br><br><br>
 
 <i>
 <div style="font-size: 22px;">
