--- a/lab/tec/dt/api.html
+++ b/lab/tec/dt/api.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Il Calendario della Terra - poteri</title>
+    <title>The Earth Calendar - powers</title>
     <style>
         html, body {
             margin: 0;
@@ -19,7 +19,7 @@
         }
         .centered {
             text-align: center;
-            font-family: Times Roman; font-weight: bold;
+            font-family: Nimbus Roman; font-weight: bold;
         }
 a {
     color: black;
@@ -42,11 +42,31 @@ a:active {
 
 <div class="centered" style="width: 60%; margin: 0 auto; margin-top: -80px; font-size: 36px;">
 
-The Earth Calendar uses a special nomenclature to designate all its time divisions: the days, the years, and the septennia. Its logo reflects this approach:
+Three APIs available<br>fully documented with all necessary references
 
-<br>
+<br><br><br>
 
-<img src="tec_logo.svg" width="18%">
+<div style="font-size: 28px;">
+
+The Earth Calendar Date API<br>
+Complete date conversion and calculation system<br>
+<a href="https://tec-date.earthcal.hyperlinker.org" target="date">https://tec-date.earthcal.hyperlinker.org</a>
+
+<br><br>
+
+Septennium Calculator API<br>
+The Earth Calendar • Seven-Year Cycle Calculator<br>
+<a href="https://septennium.earthcal.hyperlinker.org" target="date">https://septennium.earthcal.hyperlinker.org</a>
+
+<br><br>
+
+Human Powers API<br>
+The Earth Calendar • Daily Human Qualities Inspiration<br>
+<a href="https://powers.earthcal.hyperlinker.org" target="date">https://powers.earthcal.hyperlinker.org</a>
+
+<br><br>
+
+</div>
 
 </div>
 
@@ -55,8 +75,6 @@ The Earth Calendar uses a special nomenclature to designate all its time divisio
 <a href="index.html">&#9660;</a>
 
 </div>
-
-<script src="setten_1.js"></script>
 
 </body>
 </html>
