--- a/lab/corpus/dpr_380.html
+++ b/lab/corpus/dpr_380.html
@@ -49,7 +49,7 @@
 
 <span style="font-size: 22px;">
 
-Collezione di Lettere inviate agli Onorevoli e Senatori italiani dal 02/06 al 12/10 dell’anno 56 della Nuova Era Terrestre per denunciare l'iniqua ferocia nel D.P.R. 380/2001.
+Collezione di Lettere inviate agli Onorevoli e Senatori italiani, dal 02/06 al 12/10 dell’anno 56 della Nuova Era Terrestre, per denunciare l'iniqua ferocia del D.P.R. 380/2001.
 
 <br><br>
 
@@ -63,7 +63,13 @@ Titolo della Collezione:
 
 <br><br>
 
-Opera su network perenne <a class="none" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a> e certificata su blockchain <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. La licenza è presente nel frontespizio della Collezione. Somma richiesta: 9.000.000 (nove milioni) di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. In vendita presso <i><a class="none" href="../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">La Bottega della Buona Sorte</a></i>.
+Opera su network perenne <a class="none" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a> e certificata su blockchain <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. La licenza è presente nel frontespizio della Collezione. Somma richiesta: 9.000.000 (nove milioni) di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>.
+
+<!--
+
+ In vendita presso <i><a class="none" href="../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">La Bottega della Buona Sorte</a></i>.
+
+-->
 
 </span>
 
