--- a/lab/corpus/rut_56.html
+++ b/lab/corpus/rut_56.html
@@ -49,7 +49,7 @@
 
 <span style="font-size: 22px;">
 
-Collezione di Lettere inviate agli Euro Parlamentari, italiani e non dal 20/09 al 30/09 dell’anno 56 della Nuova Era Terrestre per rivelare il più grande inganno della Storia, con citazione dell'iniquo D.P.R. 380/2001.
+Collezione di Lettere inviate agli Euro Parlamentari, italiani e non, dal 20/09 al 30/09 dell’anno 56 della Nuova Era Terrestre, per rivelare il più grande inganno della Storia. Con citazione dell'iniquo D.P.R. 380/2001.
 
 <br><br>
 
@@ -63,7 +63,13 @@ Titolo dell'opera:
 
 <br><br>
 
-Opera su network perenne <a class="none" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a> e certificata su blockchain <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. La licenza è nell'ultima pagina della Lettera. Somma richiesta: 27.000.000 (ventisette milioni) di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. In vendita presso <i><a class="none" href="../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">La Bottega della Buona Sorte</a></i>.
+Opera su network perenne <a class="none" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a> e certificata su blockchain <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. La licenza è nell'ultima pagina della Lettera. Somma richiesta: 27.000.000 (ventisette milioni) di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>.
+
+<!--
+
+ In vendita presso <i><a class="none" href="../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">La Bottega della Buona Sorte</a></i>.
+
+-->
 
 </span>
 
