--- a/lab/corpus/acc_56.html
+++ b/lab/corpus/acc_56.html
@@ -49,7 +49,7 @@
 
 <span style="font-size: 22px;">
 
-Lettera Aperta inviata alla Corte Costituzionale in data 27/02 nell’anno 56 della Nuova Era Terrestre per denunciare l'assenza di una vera Repubblica e Democrazia.
+Lettera Aperta inviata alla Corte Costituzionale, in data 27/02 nell’anno 56 della Nuova Era Terrestre, per denunciare l'assenza di una vera Repubblica e Democrazia.
 
 <br><br>
 
@@ -63,7 +63,13 @@ Titolo dell'opera:
 
 <br><br>
 
-Opera su network perenne <a class="none" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a> e certificata su blockchain <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. La licenza è nell'ultima pagina della Lettera. Somma richiesta: 7.000.000 (sette milioni) di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. In vendita presso <i><a class="none" href="../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">La Bottega della Buona Sorte</a></i>.
+Opera su network perenne <a class="none" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a> e certificata su blockchain <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. La licenza è nell'ultima pagina della Lettera. Somma richiesta: 7.000.000 (sette milioni) di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>.
+
+<!--
+
+ In vendita presso <i><a class="none" href="../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">La Bottega della Buona Sorte</a></i>.
+
+-->
 
 </span>
 
