--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -95,23 +95,11 @@ Prima lettera all'EuroParlamento
 <div style="font-size: 24px; padding: 12px; display: inline-block;">
 
 Questa non è più solo una ristretta campagna socio/politica.<br>
-<b><a class="none" href="../../index.htm">Il D.P.R.380/2001 si inserisce ormai in una ben più ampia iniziativa.</a></b><br>
-
-
-</div>
-
-<!--
-
-Perché fatti del genere mostrano inequivocabilmente la permasta tirannide.
-
-<div style="font-size: 28px; padding: 12px; display: inline-block;">
-
-Questa ormai non è più solo una limitata campagna socio/politica<br>
-<b><a class="none" href="cultura.html">D.P.R.380/2001: nasce l'iniziativa culturale ed artistica</a></b>
+Il <b>D.P.R.380/2001</b> si inserisce ormai in una ben più ampia iniziativa:
+<b><a class="none" href="../../index.htm">culturale</a></b> ed <b><a class="none" href="../../../corpus/index.html">artistica</a></b>.<br>
+Vergogne del genere evidenziano la permasta tirannide e contribuiscono a farla cadere.
 
 </div>
-
--->
 
 <br><br><br>
 
