--- a/lab/repita/camps/immo/pdr_1.html
+++ b/lab/repita/camps/immo/pdr_1.html
@@ -107,6 +107,8 @@ Con osservanza,
 
 <br><br>
 
+<div style="text-align: right; font-size: 28px;">
+
 Danilo D'Antonio<br>
 Laboratorio Eudemonia<br>
 Val Vibrata, Teramo
@@ -117,31 +119,29 @@ http://dda.hyperlinker.org<br>
 email: dda@hyperlinker.org<br>
 tel. solo WSP: 339 5014947
 
-<br><br>
+</div>
 
-Internet, 21/12/56 (TEC & Epoch)
+<br>
 
-<br><br>
+Internet, 21/12/56 (<a class="noline" href="../../../tec/dt/index.html" target="epoch">TEC & Epoch</a>)
 
-Se i suoi Assistenti Digitali (esperti, competenti, professionisti sono tutti compromessi, in totale conflitto d'interesse) visiteranno i seguenti siti, potranno rapidamente riportarLe un loro obiettivo parere critico:
-
-<br><br>
+<br><br><br>
 
 La Banca dei Pubblici Impieghi<br>
-https://repita.hyperlinker.org
+<a class="noline" href="../../index.htm" target="">https://repita.hyperlinker.org</a>
 
 <br><br>
 
 Impegno Inter-Nazionale per Dissolvere il<br>
-https://Sopruso-Immobiliare.hyperlinker.org
+<a class="noline" href="index.html" target="">https://Sopruso-Immobiliare.hyperlinker.org</a>
 
 <br><br><br>
 
-Era compito della Repubblica (se ci fosse davvero stata lo si sarebbe fatto) rimuovere gli ostacoli di ordine economico e sociale, che, limitando di fatto la libertà e l'eguaglianza dei cittadini, impediscono il pieno sviluppo della persona umana e l'effettiva partecipazione di tutti i lavoratori all'organizzazione politica, economica e sociale del Paese.
+Era compito della Repubblica (e se ci fosse minimamente stata lo si sarebbe fatto) rimuovere gli ostacoli di ordine economico e sociale, che, limitando di fatto la libertà e l'eguaglianza dei cittadini, impediscono il pieno sviluppo della persona umana e l'effettiva partecipazione di tutti i lavoratori all'organizzazione politica, economica e sociale del Paese.
 
 <br><br>
 
-Il principio era chiaramente espresso. 80 anni trascorsi, governanti a non finire, istituzioni stracolme di ogni genere di onoratissime personalità, un tappeto sconfinato di laureatissimi esperti ... qualcuno avrebbe potuto sollevare la questione e fare applicare il principio. Qualcuno lo avrebbe potuto fare, se fosse stata una davvero brava persona. 
+Il principio era chiaramente espresso. 80 anni trascorsi, governanti di tutti i colori, istituzioni stracolme di onoratissime personalità, ovunque un tappeto sconfinato di laureatissimi competenti ... qualcuno avrebbe potuto sollevare la questione e fare applicare il principio. Qualcuno l'avrebbe fatto, se vi fossere state davvero brave persone. Innamorate della Repubblica e sua figlia Democrazia, onorandole capendole, invece che citandole di continuo per farsene scudo.
 
 <br><br>
 
