--- a/lab/repita/camps/immo/pdr_1.html
+++ b/lab/repita/camps/immo/pdr_1.html
@@ -135,22 +135,30 @@ La Banca dei Pubblici Impieghi<br>
 Impegno Inter-Nazionale per Dissolvere il<br>
 <a class="noline" href="index.html" target="">https://Sopruso-Immobiliare.hyperlinker.org</a>
 
+<br><br><br><br>
+
+<center>___#___°___#___°___#___°___#___</center>
+
 <br><br><br>
 
-Era compito della Repubblica (e se ci fosse minimamente stata lo si sarebbe fatto) rimuovere gli ostacoli di ordine economico e sociale, che, limitando di fatto la libertà e l'eguaglianza dei cittadini, impediscono il pieno sviluppo della persona umana e l'effettiva partecipazione di tutti i lavoratori all'organizzazione politica, economica e sociale del Paese.
+Era compito della Repubblica (e se ci fosse minimamente stata una vera Repubblica lo si sarebbe fatto!) rimuovere gli ostacoli di ordine economico e sociale, che, limitando di fatto la libertà e l'eguaglianza dei cittadini, impedivano il pieno sviluppo della persona umana e l'effettiva partecipazione di tutti i lavoratori all'organizzazione politica, economica e sociale del Paese.
 
 <br><br>
 
-Il principio era chiaramente espresso. 80 anni trascorsi, governanti di tutti i colori, istituzioni stracolme di onoratissime personalità, ovunque un tappeto sconfinato di laureatissimi competenti ... qualcuno avrebbe potuto sollevare la questione e fare applicare il principio. Qualcuno l'avrebbe fatto, se vi fossere state davvero brave persone. Innamorate della Repubblica e sua figlia Democrazia, onorandole capendole, invece che citandole di continuo per farsene scudo.
+Il principio cardine, anche se vagamente, era chiaramente espresso. Invece tutti immoti.
 
 <br><br>
 
-Il Laboratorio Eudemonia, in vece loro, da oltre trent'anni lo persegue da solo, quel compito.<br>
+80 anni trascorsi, governanti di tutti i colori, istituzioni stracolme di onorate personalità, ovunque un tappeto sconfinato di laureatissimi riveriti competenti ... qualcuno avrebbe potuto sollevare la questione e fare applicare il principio. Ed in vero qualcuno l'avrebbe fatto, se tra tutti costoro vi fossere state davvero brave persone. Innamorate della Repubblica e sua figlia Democrazia: che le avessero onorate capendole, invece che limitarsi a citarle di continuo per farsene scudo.
+
+<br><br>
+
+Il Laboratorio Eudemonia, in vece di tutti loro, da oltre trent'anni lo persegue da solo, quel compito.<br>
 E, grazie al Laboratorio Eudemonia, l'Italia, ancora una volta, è stata e sarà prima.
 
 </div>
 
-<br><br><br><br>
+<br><br><br>
 
 <div style="text-align: center; font-size: 44px;"><b><i>
 
