--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -96,8 +96,8 @@ Prima lettera all'EuroParlamento
 
 Questa non è più solo una ristretta campagna socio/politica.<br>
 Il <b>D.P.R.380/2001</b> si inserisce ormai in una ben più ampia iniziativa:
-<b><a class="none" href="../../index.htm">culturale</a></b> ed <b><a class="none" href="../../../corpus/index.html">artistica</a></b>.<br>
-Abomini del genere evidenziano la permasta tirannide e contribuiscono a farla cadere.
+<b><a class="none" href="../../index.htm" target="cc">culturale</a></b> ed <b><a class="none" href="../../../corpus/index.html" target="aa">artistica</a></b>.<br>
+Abomini del genere evidenziano la <b><a class="none" href="../../tirannide-e-dittatura.htm" target="pt">permasta tirannide</a></b> e contribuiscono a farla cadere.
 
 </div>
 
