--- a/lab/index.html
+++ b/lab/index.html
@@ -80,11 +80,15 @@ a:active {
 
 <div class="centered" style="width: 60%; margin: 0 auto; margin-top: -120px; font-size: 48px;" >
 
-<a href="hl_it.htm">Hyper Linker</a>
+<a href="hl_it.htm">
+
+Hyper Linker
 
 <br>
 
-<div style="font-size: 18px; ">GLOBAL RESEARCHES FOR COMMON PROFIT</div>
+<div style="font-size: 18px; ">GLOBAL RESEARCH AND FINDINGS FOR COMMON PROFIT</div>
+
+</a>
 
 </div>
 
