--- a/lab/tec/dt/index.html
+++ b/lab/tec/dt/index.html
@@ -98,7 +98,7 @@ This is the <a href="new_era.html">New Terrestrial Era</a>, <a href="septennia.h
 
 <br><br><br><br>
 
-<i><a href="../legal.htm">Copyright and trademark</a> <a href="../../eulab/index.htm">Laboratorio Eudemonia</a> - Created by <a href="../../index.html">HyperLinker</a> - <a href="mailto:info@hyperlinker.org">Contact</a> - <a href="api.html">APIs</a> and <a href="../agenda/index.html">Agenda</a> available</i>
+<i><a href="../legal.htm">Copyright and trademark</a> <a href="../../eulab/index.htm">Laboratorio Eudemonia</a> - Created by <a href="../../index.html">HyperLinker</a> - <a href="mailto:info@hyperlinker.org">Contact</a> - <a href="api.html">APIs</a> and <a href="../agenda/index.html">Agenda</a> available soon</i>
 
 </div>
 
