--- a/lab/index.html
+++ b/lab/index.html
@@ -34,6 +34,7 @@
             'al-presidente.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/pdr.html',
             'alla-presidenza.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/pdr.html',
             'rut.hyperlinker.org': 'https://hyperlinker.org/corpus/rut_56.html',
+            'art-culture.hyperlinker.org': 'https://hyperlinker.org/corpus/art_56.html',
             'corpus.hyperlinker.org': 'https://hyperlinker.org/corpus/index.html',
             'epoch.hyperlinker.org': 'https://hyperlinker.org/tec/dt/index.html',
             'sopruso-immobiliare.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/index.html',
