--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -95,8 +95,8 @@ Prima lettera all'EuroParlamento
 <div style="font-size: 24px; padding: 12px; display: inline-block;">
 
 Questa non è più solo una ristretta campagna socio/politica.<br>
-Il <b>D.P.R.380/2001</b> si inserisce ormai in una ben più ampia iniziativa:
-<b><a class="none" href="../../index.htm" target="cc">culturale</a></b> ed <b><a class="none" href="../../../corpus/index.html" target="aa">artistica</a></b>.<br>
+Il <b>D.P.R.380/2001</b> si inserisce ormai in una ben più ampia 
+<b><a class="none" href="../../index.htm" target="cc">iniziativa culturale</a></b>.<br>
 Abomini del genere evidenziano la <b><a class="none" href="../../tirannide-e-dittatura.htm" target="pt">permasta tirannide</a></b> e contribuiscono a farla cadere.
 
 </div>
