--- a/lab/index.html
+++ b/lab/index.html
@@ -38,7 +38,7 @@
             'corpus.hyperlinker.org': 'https://hyperlinker.org/corpus/index.html',
             'epoch.hyperlinker.org': 'https://hyperlinker.org/tec/dt/index.html',
             'sopruso-immobiliare.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/index.html',
-            'repubblica-democrazia.hyperlinker.org': 'https://hyperlinker.org/repita/index.htm',
+            'repubblica-democrazia.hyperlinker.org': 'https://hyperlinker.org/repita/rede/rede_1.html',
         };
         if (redirectMap[hostname]) {
             window.location.replace(redirectMap[hostname]);
