--- a/lab/repita/democrazia-tirannide.htm
+++ b/lab/repita/democrazia-tirannide.htm
@@ -34,11 +34,11 @@ DEMOCRAZIA / TIRANNIDE
 
 <br><br><br>
 
-In fondo è facile capir la vita se non si tollera sia sempre sotto attacco.
+In fondo è facile capire la vita se non si tollera sia sempre sotto attacco.
 
 <br><br>
 
-La tirannide non è altro che una centralità di poteri perennemente posseduta da assunti a vita e da eletti a vita. Da essa conseguono direttamente dispotismo, quando va bene, e dittatura, quando si fa scuro. Tiranni sono gli eterni detentori (assunti a vita) di impieghi mai ancora potuti divenire pubblici (partecipabili grazie alla regola del pro tempore) ed i rappresentanti (eletti a vita) di ogni cricca, elite, lobby e mafia esistente che mantengono loro ostaggio il parlamento.
+La tirannide non è altro che una centralità di poteri perennemente posseduta da assunti a vita e da eletti a vita. Da essa conseguono direttamente dispotismo, quando va bene, e dittatura, quando si fa scuro. Tiranni sono gli eterni detentori (assunti a vita) di impieghi mai ancora potuti divenire pubblici (partecipabili grazie alla regola del pro tempore) ed i rappresentanti (eletti a vita) di ogni cricca, elite, lobby e mafia legale esistente che mantengono loro ostaggio il parlamento.
 
 <br><br>
 
