--- a/lab/repita/democrazia-tirannide.htm
+++ b/lab/repita/democrazia-tirannide.htm
@@ -38,15 +38,15 @@ In fondo è facile capire la vita se non si tollera sia sempre sotto attacco.
 
 <br><br>
 
-La tirannide non è altro che una centralità di poteri perennemente posseduta da assunti a vita e da eletti a vita. Da essa conseguono direttamente dispotismo, quando va bene, e dittatura, quando si fa scuro. Tiranni sono gli eterni detentori (assunti a vita) di impieghi mai ancora potuti divenire pubblici (partecipabili grazie alla regola del pro tempore) ed i rappresentanti (eletti a vita) di ogni cricca, elite, lobby e mafia legale esistente che mantengono loro ostaggio il parlamento.
+La tirannide non è altro che una centralità di poteri perennemente posseduta da assunti a vita e da eletti a vita. Da essa conseguono direttamente dispotismo, quando va bene, e dittatura, quando si fa scuro. Tiranni sono gli eterni detentori (assunti a vita) di impieghi mai ancora potuti divenire pubblici (partecipabili grazie alla regola del pro tempore) ed i rappresentanti (eletti a vita) di ogni cricca, elite, gruppo, lobby esistente. Metà della popolazione elettorale rifiuta tuto questo ma costoro non se ne dan conto e mai nemmeno hanno, come dovrebbero, chiesto: perché? Perché sanno benissimo come stanno le cose.
 
 <br><br>
 
-La Democrazia fa cadere il modello del monarca (perenne padrone) ed introduce il costante rinnovo di chi è assunto e di chi è eletto nella res publica. Disintegrando costantemente ogni legame di casta e mafioso e permettendo al vero di emergere sempre. Pur chiara, semplice, incontrovertibile, questa consapevolezza è ancora assente. Tanto grande è il potere di assunti ed eletti a vita.
+La Democrazia fa cadere il modello del monarca (perenne padrone) ed introduce il costante rinnovo di chi è assunto e di chi è eletto nella res publica. Disintegrando costantemente ogni legame di casta e permettendo al vero di emergere sempre. Pur chiara, semplice, incontrovertibile, questa consapevolezza è ancora assente. Tanto grande è il potere di assunti ed eletti a vita.
 
 <br><br>
 
-Chi non affronta questo mostro globale, chi non denuncia quest'abominio, chi non smaschera gli assunti a vita e gli eletti a vita in un'ancora finta "repubblica" (che in realtà è sempre il vecchio stato monarchico indebitamente permasto dappertutto) si fa complice e correo (o rimarrà vittima) di questa mostruosità. Delinquenti pubblici (non nostri dipendenti!) sono coloro che opprimono il mondo intero impedendo ovunque (con il loro perenne possesso di impieghi, poteri e redditi pubblici) il sorgere di un'era realmente democratica. Il costituirsi di vere Repubbliche.
+Chi non affronta questo mostro globale, chi non denuncia quest'abominio, chi non smaschera gli assunti a vita e gli eletti a vita in un'ancora finta "repubblica" (che in realtà è sempre il vecchio stato monarchico indebitamente permasto dappertutto) si fa complice e correo (o rimarrà vittima) di questa mostruosità. Non sono nostri dipendenti sono coloro che opprimono il mondo intero impedendo ovunque (con il loro perenne possesso di impieghi, poteri e redditi pubblici) il sorgere di un'era realmente democratica. Il costituirsi di vere Repubbliche.
 
 <br><br>
 
