--- a/lab/repita/rede/rede_3.html
+++ b/lab/repita/rede/rede_3.html
@@ -46,7 +46,7 @@
 
 <div style="font-family='Adwaita Sans, sans-serif'; font-size: 28px;">
 
-In sintesi: si vive in una reale Democrazia quando il Popolo gode di una vera Repubblica, dunque solo se è presente una Banca dei Pubblici Impieghi (dove chiunque possa iscriversi e prenotarsi per fornire il proprio contributo) che permetta il periodico e regolare rinnovo del personale gestente la cosa pubblica. Se questo Istituto non è vigente, tanto la "democrazia" che la "repubblica", pur dichiarate, sono fittizie. Trattasi di forme volutamente mantenute confuse, intermedie, spurie, da coloro che, godendo di indebiti privilegi, non vogliono rinunciarvi ed ingannano il Popolo (tramite gli enti educativi ed informativi in loro possesso) con ogni sorta di trucco giuridico e propangadistico.
+In sintesi: si vive in una reale Democrazia quando il Popolo gode di una vera Repubblica, dunque solo se è presente una Banca dei Pubblici Impieghi (dove chiunque possa iscriversi e prenotarsi per fornire il proprio contributo) che permetta il periodico e regolare rinnovo del personale gestente la cosa pubblica. Se questo Istituto non è vigente, tanto la "democrazia" che la "repubblica", pur dichiarate, sono fittizie. Trattasi di forme volutamente mantenute confuse, intermedie, spurie, da coloro che, godendo di indebiti privilegi, non vogliono rinunciarvi ed ingannano il Popolo (tramite gli enti educativi ed informativi in loro possesso) con ogni sorta di sofisma giuridico e propangadistico.
 
 </div>
 
