--- a/lab/repita/rede/rede_6.html
+++ b/lab/repita/rede/rede_6.html
@@ -62,7 +62,7 @@ E' certo che, con tutti gli scienziati, ricercatori, professori e professionisti
 <img src="blank.gif" width="69	pt" height="1px"> 
 <u>6</u>
 <img src="blank.gif" width="69	pt" height="1px"> 
-<a class="nonenone" href="../index.htm">7 &gt;</a>
+<a class="nonenone" href="../camps/immo/index.html">7 &gt;</a>
 
 </div>
 
